Config options updated to stable. Readme updated to a new format which explains each design decision.

--- a/config/HardcoreEnderExpansion.cfg
+++ b/config/HardcoreEnderExpansion.cfg
@@ -26,8 +26,11 @@ block {
     I:obsidianEnd=1600
     I:obsidianSpecial=1607
     I:obsidianSpecialGlow=1611
+    I:soulCharm=1624
     I:spookyLeaves=1619
     I:spookyLog=1617
+    I:stardustOre=1625
+    I:stardustPlaced=1626
     I:templeEndPortal=1606
 }
 
@@ -42,6 +45,7 @@ general {
     B:enableTempleCaller=true
     B:enableUpdateNotifications=true
     B:gooBattlesWater=true
+    B:overpoweredMobs=false
 }
 
 
@@ -54,9 +58,11 @@ item {
     I:altarNexus=7512
     I:brewingStand=7506
     I:bucketEnderGoo=7514
+    I:corporealMirageOrb=7524
     I:dragonEssence=7500
     I:drySplinter=7520
     I:endPowder=7502
+    I:enderCompendium=7529
     I:enderGem=7511
     I:enderPearl=7503
     I:endermanHead=7509
@@ -69,10 +75,16 @@ item {
     I:infestationRemedy=7518
     I:infestedBatWing=7519
     I:instabilityOrb=7508
+    I:knowledgeFragment=7531
     I:lorePage=7505
+    I:minionContainer=7530
+    I:musicDisk=7528
     I:number=7501
+    I:potionOfInstability=7525
     I:silverfishBlood=7517
     I:spawnEggs=7515
+    I:spectralWand=7527
+    I:stardust=7526
     I:templeCaller=7504
 }
 
