--- a/config/AtomicScience.cfg
+++ b/config/AtomicScience.cfg
@@ -5,27 +5,39 @@
 ####################
 
 block {
-    I:BlockID1=4095
-    I:"Radioactive Block"=3768
     I:accelerator=3783
-    I:atomicAssembler=3786
-    I:centrifuge=3769
+    I:centrifuge=3770
     I:chemicalExtractor=3779
     I:controlRod=3774
+    I:electricTurbine=3772
     I:electromagnet=3778
     I:electromagnetGlass=3781
-    I:fissionReactor=3770
-    I:fulmination=3785
+    I:fissionReactor=3771
+    I:fulmination=3784
     I:funnel=3782
     I:fusionReactor=3776
-    I:instantBuilder=3784
-    I:nuclearBoiler=3772
+    I:nuclearBoiler=3773
     I:plasma=3777
-    I:reactorTap=3789
+    I:quantumAssembler=3785
+    I:radioactive=3768
+    I:reactorDrain=3787
     I:siren=3780
     I:thermometer=3775
-    I:toxicWaste=3788
-    I:turbine=3771
+    I:toxicWaste=3786
+    I:uraniumOre=3769
+}
+
+
+####################
+# enabled_list
+####################
+
+enabled_list {
+    B:Enabled_antimatter=true
+    B:Enabled_breederFuel=true
+    B:Enabled_darkMatter=true
+    B:Enabled_fissileFuel=true
+    B:Enabled_uranium=true
 }
 
 
@@ -38,11 +50,13 @@ general {
     B:"Allow Layered Turbines"=true
     B:"Allow Radioactive Ores"=true
     B:"Allow Toxic Waste"=true
-    B:"Allow Uranium Ore Dictionary Compatiblity"=true
+    B:"Allow Uranium Ore Dictionary Compatibility"=true
+    B:"Allow auto Quantum Assembler recipes (Recommended)"=true
     B:"Disable IC2 Uranium Compression (Recommended)"=true
-    B:"Disable Radiation"=false
+    D:"Fission Reactor Boil Volume Multiplier"=1.0
     D:"Fulmination Output Multiplier"=1.0
-    I:"Steam to Joule Ratio"=5000
+    S:"Quantum Assembler Recipes"=
+    D:"Steam Multiplier"=1.0
     D:"Turbine Output Multiplier"=1.0
     I:"Uranium Hexafluoride Ratio"=200
 }
@@ -53,20 +67,23 @@ general {
 ####################
 
 item {
-    I:HazmatBody=13766
-    I:HazmatBoots=13764
-    I:HazmatBottom=13765
-    I:HazmatTop=13767
-    I:antimatter=13774
-    I:cellDeuterium=13772
-    I:cellEmpty=13769
-    I:cellWater=31742
-    I:rodBreederFuel=13781
-    I:rodFissileFuel=13771
-    I:strangeMatter=13773
-    I:thermometer=13768
-    I:uranium=13777
-    I:yellowcake=13776
+    I:HazmatBody=13769
+    I:HazmatBoots=13771
+    I:HazmatBottom=13770
+    I:HazmatTop=13768
+    I:"Toxic Waste Bucket"=13782
+    I:antimatter=13777
+    I:breederFuel=13779
+    I:cellDeuterium=13775
+    I:cellEmpty=13773
+    I:cellWater=13778
+    I:darkMatter=13776
+    I:fissileFuel=13774
+    I:rodBreederFuel=31742
+    I:rodFissileFuel=31743
+    I:thermometer=13772
+    I:uranium=13781
+    I:yellowcake=13780
 }
 
 
@@ -76,15 +93,6 @@ item {
 
 ore_generation {
     B:"Generate Uranium Ore"=true
-}
-
-
-####################
-# potion
-####################
-
-potion {
-    I:"radiation potion ID"=21
 }
 
 
