--- a/config/Calclavia.cfg
+++ b/config/Calclavia.cfg
@@ -1,10 +1,10 @@
 # Configuration file
 
 ####################
-# """""""""""""""""""""""""""""""""""""""""""""""allow load items"""""""""""""""""""""""""""""""""""""""""""""""
+# """"""""""""""""""""""""""""""""""""""""""""""""""""""allow load items""""""""""""""""""""""""""""""""""""""""""""""""""""""
 ####################
 
-""""""""""""""""""""""""""""""""""""""""""""""""allow load items"""""""""""""""""""""""""""""""""""""""""""""""" {
+"""""""""""""""""""""""""""""""""""""""""""""""""""""""allow load items""""""""""""""""""""""""""""""""""""""""""""""""""""""" {
     B:blockOreCopper=true
     B:blockOreTin=true
     B:itemCircuitAdvanced=true
@@ -28,11 +28,21 @@
 
 
 ####################
+# block
+####################
+
+block {
+    I:creativeBuilder=3973
+    I:infinite=3974
+    I:multiPart=3975
+}
+
+
+####################
 # crafting
 ####################
 
 crafting {
-    B:"Allow item.basicItem.solar_module_0 Crafting"=true
     B:"Allow item.calclavia:circuitAdvanced Crafting"=true
     B:"Allow item.calclavia:circuitBasic Crafting"=true
     B:"Allow item.calclavia:circuitElite Crafting"=true
@@ -45,10 +55,17 @@ crafting {
     B:"Allow item.calclavia:plateIron Crafting"=true
     B:"Allow item.calclavia:plateSteel Crafting"=true
     B:"Allow item.calclavia:plateTin Crafting"=true
-    B:"Allow item.calclavia:wrench Crafting"=true
-    B:"Allow item.ingotGold Crafting"=true
-    B:"Allow item.ingotIron Crafting"=true
-    B:"Allow item.tconstruct.Materials.PaperStack Crafting"=true
+    B:"Allow item.calclavia:screwdriver Crafting"=true
+}
+
+
+####################
+# general
+####################
+
+general {
+    B:Enable_Calclavia_Core_Resources=true
+    B:Enable_Calclavia_Core_Tools=true
 }
 
 
@@ -57,25 +74,25 @@ crafting {
 ####################
 
 item {
-    I:circuitAdvanced=13975
-    I:circuitBasic=13974
-    I:circuitElite=13976
-    I:dustBronze=13988
-    I:dustSteel=13987
-    I:ingotBronze=13986
-    I:ingotCopper=13983
-    I:ingotSteel=13985
-    I:ingotTin=13984
-    I:motor=13973
+    I:circuitAdvanced=13973
+    I:circuitBasic=13972
+    I:circuitElite=13974
+    I:dustBronze=13986
+    I:dustSteel=13985
+    I:ingotBronze=13984
+    I:ingotCopper=13981
+    I:ingotSteel=13983
+    I:ingotTin=13982
+    I:motor=31741
     I:oreCopper=3970
     I:oreTin=3971
-    I:plateBronze=13979
-    I:plateCopper=13977
-    I:plateGold=13982
-    I:plateIron=13981
-    I:plateSteel=13980
-    I:plateTin=13978
-    I:wrench=13972
+    I:plateBronze=13977
+    I:plateCopper=13975
+    I:plateGold=13980
+    I:plateIron=13979
+    I:plateSteel=13978
+    I:plateTin=13976
+    I:screwdriver=31740
 }
 
 
@@ -84,8 +101,17 @@ item {
 ####################
 
 ore_generation {
-    B:"Generate oreCopper"=true
-    B:"Generate oreTin"=true
+    B:"Generate oreCopper"=false
+    B:"Generate oreTin"=false
+}
+
+
+####################
+# """"""""""""""""""""""""""""""""""""""""""""""""""""""""potion id""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+####################
+
+"""""""""""""""""""""""""""""""""""""""""""""""""""""""""potion id""""""""""""""""""""""""""""""""""""""""""""""""""""""""" {
+    I:"radiation ID"=21
 }
 
 
