--- a/config/CarpentersBlocks.cfg
+++ b/config/CarpentersBlocks.cfg
@@ -12,6 +12,7 @@ block {
     I:"Collapsible Block"=2514
     I:DaylightSensor=2509
     I:Door=2511
+    I:"Flower Pot"=3521
     I:Gate=2504
     I:Hatch=2510
     I:Ladder=2513
@@ -21,6 +22,17 @@ block {
     I:Slope=2501
     I:Stairs=2502
     I:Torch=2515
+}
+
+
+####################
+# chance to damage hammer when interacting with block
+####################
+
+"chance to damage hammer when interacting with block" {
+    D:itemHammerDamageChanceFromCollapsible=0.2
+    D:itemHammerDamageChanceFromSlopes=0.75
+    D:itemHammerDamageChanceFromStairs=1.0
 }
 
 
@@ -36,6 +48,7 @@ control {
     B:"Enable Collapsible Block"=true
     B:"Enable Daylight Sensor"=true
     B:"Enable Door"=true
+    B:"Enable Flower Pot"=true
     B:"Enable Gate"=true
     B:"Enable Hatch"=true
     B:"Enable Ladder"=true
@@ -58,9 +71,26 @@ features {
     B:"Enable Block Ownership"=true
     B:"Enable Covers"=true
     B:"Enable Dye Colors"=true
+
+    # When enabled, unobstructed stationary fluid adjacent to block will render in the same space.
+    # Note: this only takes effect when Fancy Graphics are enabled.
     B:"Enable Fancy Fluids"=true
     B:"Enable Overlays"=true
+    B:"Enable Patterns"=true
     B:"Enable Side Covers"=true
+
+    # This enables most plants to be planted on covered or overlaid Carpenter's blocks.
+    B:"Extended Plant Support"=true
+}
+
+
+####################
+# flower pot
+####################
+
+"flower pot" {
+    # Set to true to override biome-colored plants to a lively green.
+    B:"Override Biome Coloring"=true
 }
 
 
@@ -88,6 +118,7 @@ item {
     I:"Collapsible Block"=9
     I:"Daylight Sensor"=1
     I:Door=1
+    I:"Flower Pot"=1
     I:Gate=1
     I:Hatch=1
     I:Ladder=4
@@ -105,6 +136,9 @@ item {
 ####################
 
 rendering {
+    # This will fix block texture issues caused by MCPatcher.
+    B:"Enable MCPatcher Compatibility"=false
+
     # Provides integration with Optifine's block coloring methods.
     # Note: this is needed to support Custom Colors.
     B:"Enable Optifine Integration"=true
@@ -134,6 +168,7 @@ tools {
     B:"Enable Chisel"=true
     B:"Enable Hammer"=true
     B:"Vanilla Tools Damageable"=true
+    I:"Vanilla Tools Uses"=400
 }
 
 
