--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -18,6 +18,7 @@ block {
     I:idBlockAirCompressor=3356
     I:idBlockAirDistributor=3355
     I:idBlockAirLockFrame=3373
+    I:idBlockAluminumWire=3386
     I:idBlockAirLockSeal=3374
     I:idBlockAirPipe=3368
     I:idBlockCargoLoader=3362
@@ -137,7 +138,13 @@ general {
      >
 
     # By default, you will respawn on galacticraft dimensions if you die. If you set this to true, you will respawn back on earth.
-    B:"Force Overworld Spawn"=true
+    B:"Force Overworld Spawn"=false
+
+    # If true, this will move the Oxygen Indicator to the bottom. You can combine this with "Minimap Left"
+    B:"Minimap Bottom"=false
+
+    # If true, this will move the Oxygen Indicator to the left side. You can combine this with "Minimap Bottom"
+    B:"Minimap Left"=false
 
     # Setting this to false will revert night skies back to default minecraft star count
     B:"More Stars"=true
@@ -164,9 +171,6 @@ general {
 
     # Change this value to modify the damage taken per suffocation tick
     I:"Suffocation Damage"=2
-
-    # If true, this will move the Oxygen Indicator to the left side.
-    B:"Using Minimap Mod"=true
 
     # If you prefer to move the Galaxy map with your mouse, set to false
     B:"WASD Map Movement"=true
