--- a/config/AtomicScience.cfg
+++ b/config/AtomicScience.cfg
@@ -18,11 +18,13 @@ block {
     I:fusionReactor=3776
     I:nuclearBoiler=3773
     I:plasma=3777
+    I:plasmaHeater=3775
     I:quantumAssembler=3785
     I:radioactive=3768
+    I:reactorCell=4095
     I:reactorDrain=3787
     I:siren=3780
-    I:thermometer=3775
+    I:thermometer=3790
     I:toxicWaste=3786
     I:uraniumOre=3769
 }
@@ -59,6 +61,22 @@ general {
     D:"Steam Multiplier"=1.0
     D:"Turbine Output Multiplier"=1.0
     I:"Uranium Hexafluoride Ratio"=200
+    B:allowAlternateRecipes=true
+    B:allowIC2UraniumCompression=true
+    B:allowOreDictionaryCompatibility=true
+    B:allowRadioactiveOres=true
+    B:allowToxicWaste=true
+    B:allowTurbineStacking=true
+    D:darkMatterSpawnChance=0.2
+    I:deutermiumPerTritium=4
+    D:fissionBoilVolumeMultiplier=1.0
+    D:fulminationOutputMultiplier=1.0
+    I:quantumAssemblerGenerateMode=1
+    I:quantumAssemblerRecipes <
+     >
+    D:turbineOutputMultiplier=1.0
+    I:uraniumHexaflourideRatio=200
+    I:waterPerDeutermium=4
 }
 
 
@@ -76,6 +94,7 @@ item {
     I:breederFuel=13779
     I:cellDeuterium=13775
     I:cellEmpty=13773
+    I:cellTritium=31742
     I:cellWater=13778
     I:darkMatter=13776
     I:fissileFuel=13774
